# libutils-cpp

./: CMakeLists.txt  main.cpp
modules/platform/: CMakeLists.txt  README.md
modules/platform/include/utils/: platform.hpp
modules/platform/include/utils/platform/: compiler.hpp  features.hpp  simd.hpp  types.hpp
modules/platform/include/utils/platform/cpu/: cpuid.hpp  features.hpp  features_arm.hpp  features_x86-64.hpp  registers.hpp
modules/platform/src/: platform_test.cpp
modules/strings/: CMakeLists.txt
modules/strings/include/utils/: strings.hpp
modules/strings/include/utils/strings/: char_classification.hpp  char_transform.hpp  concepts.hpp  transform_case.hpp  transform_trim.hpp
